--- a/src/Neven.Axpo.Application/Neven.Axpo.Application.csproj
+++ b/src/Neven.Axpo.Application/Neven.Axpo.Application.csproj
@@ -3,7 +3,16 @@
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Neven.Axpo.Domain\Neven.Axpo.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentResults" Version="4.0.0" />
+      <PackageReference Include="Serilog" Version="4.3.2-dev-02418" />
+    </ItemGroup>
 
 </Project>
