--- a/src/Neven.Axpo.Domain/Neven.Axpo.Domain.csproj
+++ b/src/Neven.Axpo.Domain/Neven.Axpo.Domain.csproj
@@ -3,7 +3,17 @@
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Reference Include="PowerService">
+        <HintPath>..\External\netstandard2.0\PowerService.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
+    </ItemGroup>
 
 </Project>
