--- a/src/Neven.Axpo.Infrastructure/Neven.Axpo.Infrastructure.csproj
+++ b/src/Neven.Axpo.Infrastructure/Neven.Axpo.Infrastructure.csproj
@@ -3,7 +3,22 @@
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Neven.Axpo.Application\Neven.Axpo.Application.csproj" />
+      <ProjectReference Include="..\Neven.Axpo.Domain\Neven.Axpo.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="PowerService">
+        <HintPath>..\External\netstandard2.0\PowerService.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Serilog" Version="4.3.2-dev-02418" />
+    </ItemGroup>
 
 </Project>
