--- a/src/Tests/Neven.Axpo.Application.UnitTests/Neven.Axpo.Application.UnitTests.csproj
+++ b/src/Tests/Neven.Axpo.Application.UnitTests/Neven.Axpo.Application.UnitTests.csproj
@@ -19,7 +19,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Neven.Axpo.Infrastructure\Neven.Axpo.Infrastructure.csproj" />
+      <Reference Include="PowerService">
+        <HintPath>..\External\netstandard2.0\PowerService.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Neven.Axpo.Application\Neven.Axpo.Application.csproj" />
     </ItemGroup>
 
 </Project>
