--- a/src/Tests/Neven.Axpo.Infrastructure.UnitTests/Neven.Axpo.Infrastructure.UnitTests.csproj
+++ b/src/Tests/Neven.Axpo.Infrastructure.UnitTests/Neven.Axpo.Infrastructure.UnitTests.csproj
@@ -21,6 +21,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Neven.Axpo.Infrastructure\Neven.Axpo.Infrastructure.csproj" />
+      <ProjectReference Include="..\Neven.Axpo.UnitTests.Infrastructure\Neven.Axpo.UnitTests.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="PowerService">
+        <HintPath>..\..\External\netstandard2.0\PowerService.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
