- refactored report handler - added unit tests for report handler

--- a/src/Tests/Neven.Axpo.Application.UnitTests/Neven.Axpo.Application.UnitTests.csproj
+++ b/src/Tests/Neven.Axpo.Application.UnitTests/Neven.Axpo.Application.UnitTests.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Neven.Axpo.Application\Neven.Axpo.Application.csproj" />
+      <ProjectReference Include="..\Neven.Axpo.UnitTests.Infrastructure\Neven.Axpo.UnitTests.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
