--- a/src/Neven.Axpo.Application/Neven.Axpo.Application.csproj
+++ b/src/Neven.Axpo.Application/Neven.Axpo.Application.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
@@ -12,7 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="FluentResults" Version="4.0.0" />
-      <PackageReference Include="Serilog" Version="4.3.2-dev-02418" />
+      <PackageReference Include="Serilog" Version="4.3.1" />
     </ItemGroup>
 
 </Project>
