--- a/src/Neven.Axpo.Infrastructure/Neven.Axpo.Infrastructure.csproj
+++ b/src/Neven.Axpo.Infrastructure/Neven.Axpo.Infrastructure.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>disable</Nullable>
     </PropertyGroup>
 
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Serilog" Version="4.3.2-dev-02418" />
+      <PackageReference Include="Serilog" Version="4.3.1" />
     </ItemGroup>
 
 </Project>
