--- a/src/Neven.Axpo.Infrastructure/Neven.Axpo.Infrastructure.csproj
+++ b/src/Neven.Axpo.Infrastructure/Neven.Axpo.Infrastructure.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
       <PackageReference Include="Serilog" Version="4.3.1" />
     </ItemGroup>
 
